--- a/css/prx.css
+++ b/css/prx.css
@@ -1308,7 +1308,7 @@ body {
 	z-index: 1;
 	margin-bottom: 1em;
 	text-transform: uppercase;
-	font-size: 2rem;z
+	font-size: 2rem;
 	font-weight: 800;
 	line-height: 1.4;
 	flex: 0 0 100%;
@@ -1445,6 +1445,9 @@ body {
 	margin-left: 25%;
 }
 @media only screen and (max-width: 700px) {
+	#pages section.charts {
+		padding: var(--gutter_y) 20px;
+	}
 	#pages section.charts .chart-wrap, #pages section.charts .chart-wrap.expenses {
 		width: 100%;
 		margin: 0;
